--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,16 @@ spring.application.name=entertainment-web-app-backend
 #port
 server.port = 8081
 # Database settings
-spring.datasource.url=jdbc:mysql://localhost:3306/entertainment_app
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/entertainment_app
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #for hosting
-#spring.datasource.url=jdbc:mysql://root:pZjCfsWBVLERZwKmBMdpnGaCMkVtEXqB@autorack.proxy.rlwy.net:30876/railway
-#spring.datasource.username=root
-#spring.datasource.password=pZjCfsWBVLERZwKmBMdpnGaCMkVtEXqB
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://root:pZjCfsWBVLERZwKmBMdpnGaCMkVtEXqB@autorack.proxy.rlwy.net:30876/railway
+spring.datasource.username=root
+spring.datasource.password=pZjCfsWBVLERZwKmBMdpnGaCMkVtEXqB
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
